# food_price_analysis

./: .gitignore  README.md  TZ.md  main.py  manage.py  pyproject.toml  requirements.txt
analytics/: admin.py  apps.py  crud.py  forms.py  models.py  urls.py  utils.py  views.py
analytics/management/commands/: seed_db.py
analytics/migrations/: 0001_initial.py  0002_alter_category_id_alter_pricerecord_id_and_more.py  0003_alter_pricerecord_date_recorded.py
config/: settings.py  urls.py
templates/: base.html  home.html
templates/analytics/: category_detail.html  category_list.html  dashboard.html  import_export.html  product_detail.html  product_form.html  products_list.html  stores_list.html
